--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img id="scheme-pic" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="container">
       <p id="new-task-wrapper">
-        <label for="new-task">Add Item</label>
+        <label class="section-title new" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task"class="task task-input" type="text">
+          <button class="button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="section-title">Todo</h3>
       <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="list-item">
+          <input class="control" type="checkbox">
+          <label class="task task-title">Pay Bills</label>
+          <input type="text" class="task task-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img class="icon-remove" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="edit-mode list-item">
+          <input class="control" type="checkbox">
+          <label class="task task-title">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-input">
+          <button class="button edit">Save</button>
+          <button class="button delete">
+            <img class="icon-remove" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="section-title">Completed</h3>
       <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="list-item">
+          <input class="control" type="checkbox" checked>
+          <label class="task task-title">See the Doctor</label>
+          <input type="text" class="task task-input">
+          <button class="button edit">Edit</button>
+          <button class="button delete">
+            <img class="icon-remove" src="./remove.svg">
           </button>
         </li>
       </ul>
