--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img id="scheme-pic" src="./eisenhower-matrix.jpg">
+      <img id="scheme-pic" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="container">
@@ -28,7 +28,7 @@
             <input type="text" class="task task-input">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="icon-remove" src="./remove.svg">
+              <img class="icon-remove" src="./remove.svg" alt="cross on label icon">
             </button>
           </li>
           <li class="edit-mode list-item">
@@ -37,7 +37,7 @@
             <input type="text" value="Go Shopping" class="task task-input">
             <button class="button edit">Save</button>
             <button class="button delete">
-              <img class="icon-remove" src="./remove.svg">
+              <img class="icon-remove" src="./remove.svg" alt="cross on label icon">
             </button>
           </li>
         </ul>
@@ -51,7 +51,7 @@
             <input type="text" class="task task-input">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="icon-remove" src="./remove.svg">
+              <img class="icon-remove" src="./remove.svg" alt="cross on label icon">
             </button>
           </li>
         </ul>
